# wave_geometry

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  autodiff.html  changelog.html  cite.html  dynamic_expressions.html  frame_semantics.html  genindex.html  index.html  install.html  license.html  manifold_operations.html  search.html  storage.html
.doctrees/: autodiff.doctree  dynamic_expressions.doctree  environment.pickle  frame_semantics.doctree  install.doctree  manifold_operations.doctree
_sources/: frame_semantics.md.txt  index.rst.txt  manifold_operations.md.txt  storage.md.txt
benchmarks/: CMakeLists.txt  bechmark_helpers.hpp  expmap_bench.cpp  imu.cpp  util_cross_matrix_bench.cpp  util_identity_bench.cpp
benchmarks/imu_preint/: CMakeLists.txt
benchmarks/math/: expmap_bench.cpp  logmap_bench.cpp
benchmarks/rotate_chain/: CMakeLists.txt  imu_preint.cpp  rotate_chain_ceres_bench.cpp  rotate_chain_ceres_quat_bench.cpp  rotate_chain_gtsam_bench.cpp  rotate_chain_hand_bench.cpp  rotate_chain_wave_bench.cpp  rotate_chain_wave_dynamic_bench.cpp  rotate_chain_wave_reverse_bench.cpp  rotate_chain_wave_untyped_bench.cpp
cmake/: AddEigen3.cmake  AddGTest.cmake  FindEigen3.cmake  FindSphinx.cmake  InstallConfigFiles.cmake  WaveGeometryHelpers.cmake  wave_geometryConfig.cmake.in
develop/: autodiff.html  changelog.html  cite.html  dynamic_expressions.html  frame_semantics.html  genindex.html  index.html  install.html  license.html  manifold_operations.html  search.html  searchindex.js  storage.html
develop/.doctrees/: autodiff.doctree  changelog.doctree  cite.doctree  dynamic_expressions.doctree  environment.pickle  frame_semantics.doctree  index.doctree  install.doctree  license.doctree  manifold_operations.doctree  storage.doctree
develop/_sources/: cite.md.txt
develop/_static/: documentation_options.js
docs/: CMakeLists.txt  autodiff.md  cite.md  conf.py  index.rst  install.md  license.rst  manifold_operations.md
docs/_static/: theme_overrides.css
docs/_templates/: layout.html  macros.tex
include/wave/geometry/: core.hpp  debug.hpp  dynamic.hpp  estimation.hpp  geometry.hpp
include/wave/geometry/src/core/: forward_declarations.hpp
include/wave/geometry/src/core/base/: ExpressionBase.hpp
include/wave/geometry/src/core/functions/: AddConversions.hpp  DynamicJacobianEvaluator.hpp  DynamicReverseJacobianEvaluator.hpp  Evaluator.hpp  IsSame.hpp  IsSameType.hpp  JacobianEvaluator.hpp  NumericalJacobian.hpp  PrepareExpr.hpp  PrepareOutput.hpp  ReverseJacobianEvaluator.hpp  TypedJacobianEvaluator.hpp
include/wave/geometry/src/core/op/: Convert.hpp  MemberAccess.hpp
include/wave/geometry/src/core/storage/: BinaryExpression.hpp  BinaryStorage.hpp  BlockMatrix.hpp  CompoundLeafStorage.hpp  LeafExpression.hpp  LeafStorage.hpp  NaryStorage.hpp  RefSelector.hpp  UnaryExpression.hpp  UnaryStorage.hpp
include/wave/geometry/src/core/traits/: traits_bases.hpp  type_traits.hpp
include/wave/geometry/src/debug/: NumericalJacobian.hpp  PrintExpression.hpp
include/wave/geometry/src/dynamic/: Dynamic.hpp  DynamicBase.hpp  Proxy.hpp  RefProxy.hpp
include/wave/geometry/src/estimation/: Factor.hpp  FactorBase.hpp  FactorVariable.hpp  FactorVariableBase.hpp  Noise.hpp  Uncertain.hpp
include/wave/geometry/src/estimation/impl/: Factor_impl.hpp
include/wave/geometry/src/geometry/: forward_declarations.hpp  type_traits.hpp
include/wave/geometry/src/geometry/base/: AffineBase.hpp  CompoundBase.hpp  HomogeneousPointBase.hpp  PointBase.hpp  ProjectiveBase.hpp  RelativeRotationBase.hpp  RigidTransformBase.hpp  RotationBase.hpp  ScalarBase.hpp  ScalarExpression.hpp  TransformBase.hpp  TranslationBase.hpp  TwistBase.hpp  VectorBase.hpp
include/wave/geometry/src/geometry/frames/: Framed.hpp  frame_cast.hpp  frame_traits.hpp
include/wave/geometry/src/geometry/leaf/: AngleAxisRotation.hpp  CompactRigidTransform.hpp  HomogeneousPoint.hpp  Identity.hpp  MatrixRigidTransform.hpp  MatrixRotation.hpp  Point.hpp  QuaternionRotation.hpp  RelativeRotation.hpp  Rotation.hpp  Scalar.hpp  ScalarRef.hpp  Translation.hpp  Twist.hpp  UnitHomogeneousPoint.hpp  Zero.hpp
include/wave/geometry/src/geometry/op/: BoxMinus.hpp  BoxPlus.hpp  CommonExpressions.hpp  Compose.hpp  Divide.hpp  ExpMap.hpp  Inverse.hpp  LogMap.hpp  Minus.hpp  Perturb.hpp  Product.hpp  Rotate.hpp  Scale.hpp  Subtract.hpp  Sum.hpp  Transform.hpp
include/wave/geometry/src/util/: macros.hpp
include/wave/geometry/src/util/math/: CrossMatrix.hpp  IdentityMatrix.hpp  MatrixMap.hpp  math.hpp
include/wave/geometry/src/util/meta/: index_sequence.hpp  template_helpers.hpp  type_list.hpp
master/: .buildinfo  autodiff.html  changelog.html  cite.html  dynamic_expressions.html  frame_semantics.html  genindex.html  index.html  install.html  license.html  manifold_operations.html  objects.inv  search.html  searchindex.js  storage.html
master/.doctrees/: changelog.doctree  cite.doctree  environment.pickle  index.doctree  license.doctree  storage.doctree
master/_sources/: dynamic_expressions.md.txt
scripts/: format.bash
scripts/ci/: ci_check.bash  ci_make_docs.bash  ci_run.bash
test/: CMakeLists.txt  affine_test.cpp  compound_test.cpp  dynamic_expression_test.cpp  homogeneous_manifold_test.cpp  homogeneous_test.cpp  imu_preint.cpp  imu_preint_test.cpp  instantiate_typed_test.cpp.in  is_same.cpp  is_same_test.cpp  manifold_test.cpp  manifold_test.hpp  manifold_test_se3.cpp  manifold_test_so3.cpp  noise_test.cpp  rigid_transform_test.cpp  rotation_misc_test.cpp  rotation_test.cpp  rvalue_expression_test.cpp  scalar_expression_op_test.cpp  scalar_expression_test.cpp  scalar_expression_test.hpp  scalar_ref_test.cpp  test.hpp  vector_expression_test.cpp  vector_test.cpp
test/estimation/: factor_test.cpp  noise_test.cpp  test_factors.hpp
test/util/: cross_matrix_test.cpp  frame_checking_example.cpp  identity_matrix_test.cpp  index_sequence_test.cpp  math_test.cpp  type_list_test.cpp
